--- a/bombers_revenge/memorygame/Index.html
+++ b/bombers_revenge/memorygame/Index.html
@@ -1,18 +1,203 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta charset="utf-8">
 	<title>Memory Game</title>
-
-	<link rel="stylesheet" type="text/css" href="style.css">
-
+	<link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--<link rel="stylesheet" href="memory.js">-->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-	<div class="wrapper"></div>
-	<div class="game-container"></div>
-	<div class="controls-container">
-		<p id="result"></p>
-		<button id="start">Start Game</button>
+	<div class="container">
+		<h1>Such Good Memories</h1>
+		<div class="wrapper">
+			<ul class="cards">
+				<ul class="card">
+					<!--bomb image-->
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./1.png" alt="card-img">
+					</div>
+				</ul>
+				<!--dynamite image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./2.png" alt="card-img">
+					</div>
+				</ul>
+				<!--explode image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./3.png" alt="card-img">
+					</div>
+				</ul>
+				<!--fire image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./4.png" alt="card-img">
+					</div>
+				</ul>
+				<!--grenade image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./5.png" alt="card-img">
+					</div>
+				</ul>
+				<!--jail image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./6.png" alt="card-img">
+					</div>
+				</ul>
+				<!--skull image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./7.png" alt="card-img">
+					</div>
+				</ul>
+				<!--tnt image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./8.png" alt="card-img">
+					</div>
+				</ul>
+				<!--missile image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./9.png" alt="card-img">
+					</div>
+				</ul>
+				<!--handcuff image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./10.png" alt="card-img">
+					</div>
+				</ul>
+
+
+				<ul class="card">
+					<!--bomb image-->
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./1.png" alt="card-img">
+					</div>
+				</ul>
+				<!--dynamite image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./2.png" alt="card-img">
+					</div>
+				</ul>
+				<!--explode image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./3.png" alt="card-img">
+					</div>
+				</ul>
+				<!--fire image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./4.png" alt="card-img">
+					</div>
+				</ul>
+				<!--grenade image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./5.png" alt="card-img">
+					</div>
+				</ul>
+				<!--jail image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./6.png" alt="card-img">
+					</div>
+				</ul>
+				<!--skull image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./7.png" alt="card-img">
+					</div>
+				</ul>
+				<!--tnt image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./8.png" alt="card-img">
+					</div>
+				</ul>
+				<!--missile image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./9.png" alt="card-img">
+					</div>
+				</ul>
+				<!--handcuff image-->
+				<ul class="card">
+					<div class="view front-view">
+						<span class="material-icons">question_mark</span>
+					</div>
+					<div class="view back-view">
+						<img src="./10.png" alt="card-img">
+					</div>
+				</ul>
+
+			</ul><!--outside list-->
+		</div>
 	</div>
 
 	<script src="memory.js"></script>
