updated tool codes

--- a/bombers_revenge/tools.html
+++ b/bombers_revenge/tools.html
@@ -114,10 +114,10 @@
 
     <script>
         let keys = ['💣','🧨','💥','⏱️','⏰','💩','☠️','😱','🔥','Reset All','🪦','Clear Item']
-        let item1Code = [12345]
-        let item2Code = [12345]
-        let item3Code = [12345]
-        let item4Code = [12345]
+        let item1Code = ['🧨','💩','💥']
+        let item2Code = ['☠️','⏱️','💩']
+        let item3Code = ['💣','🔥','🪦']
+        let item4Code = ['⏰','😱','🪦']
         let keypadGrid = document.getElementById('keypadGrid')
         let item1 = document.getElementById('item1')
         let item2 = document.getElementById('item2')
