updated puzzles for B&S

--- a/bait_and_switch/HTML_Files_desk/sudoku.html
+++ b/bait_and_switch/HTML_Files_desk/sudoku.html
@@ -134,7 +134,7 @@
         
         function checkAnswer(){
             if ((buttonValues + "") === (code + "")){
-                window.location.replace('deskcombo.html')
+                window.location.replace('good reads.html')
             }   
         }
 
