updated night before christmas puzzles

--- a/night_before_christmas/crossword.html
+++ b/night_before_christmas/crossword.html
@@ -128,10 +128,10 @@
 
     <script>
         let keys = ['1','2','3','4','5','6','7','8','9','Reset All','0','Clear Item']
-        let item1Code = [1]
-        let item2Code = [2]
-        let item3Code = [3]
-        let item4Code = [4]
+        let item1Code = [283032]
+        let item2Code = [15161718]
+        let item3Code = [29]
+        let item4Code = [32]
         let keypadGrid = document.getElementById('keypadGrid')
         let item1 = document.getElementById('item1')
         let item2 = document.getElementById('item2')
