--- a/night_before_christmas/lithophanes.html
+++ b/night_before_christmas/lithophanes.html
@@ -14,7 +14,7 @@
         .container{
             width: 800px;
             height: 400px;
-            background-color: black;
+            background-color: green;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -22,8 +22,8 @@
         .header{
             width: 800px;
             height: 80px;
-            background-color: black;
-            color: rgb(212, 209, 209);
+            background-color: green;
+            color: white;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -40,7 +40,7 @@
         .item{
             width: 150px;
             height: 150px;
-            background-color: rgb(36, 36, 36);
+            background-color: rgb(207, 25, 25);
             margin: 10px;
             border-radius: 3px;
             display: flex;
@@ -51,7 +51,7 @@
         .key{
             width: 100px;
             height: 75px;
-            background-color: rgb(50, 50, 50);
+            background-color: rgb(207, 25, 25);
             color: rgb(212, 209, 209);
             margin: 5px;
             border-radius: 5px;
@@ -72,17 +72,17 @@
             height: 40px;
             font-size: 30px;
             color: rgb(50, 50, 50);
-            background-color: rgb(212, 209, 209);
+            background-color: rgb(232, 229, 229);
             border-radius: 3px;
             text-align: center;
         }
         .selectedItem{
-            background-color: grey;
+            background-color: pink;
         }
     </style>
 </head>
 <body>
-    <div class="header"><h1>Heavy Reading</h1></div>
+    <div class="header"><h1>White Ornaments Look So Pretty in the Light</h1></div>
     <div class="container">
         <div class="grid" id="itemGrid">
             <div class="item selectedItem" id="item1">
