--- a/night_before_christmas/index.html
+++ b/night_before_christmas/index.html
@@ -5,10 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night Before Christmas</title>
+    <style>
+        body{
+            background-color: green;
+            margin: 0px;
+            padding: 0px;
+        }
+        button{
+            width: 400px;
+            height: 200px;
+            background-color: red;
+            color: white;
+            font-size: 30px;
+            border-radius: 10px;
+            border-width: 0px;
+            box-shadow: 5px 5px 5px #AAAAAA;
+            margin: 20px;
+        }
+        #container{
+            
+            background-color: green;
+            width: 1280px;
+            height: 800px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* justify-content: center; */
+        }
+        h1,h2{
+            color: white;
+            padding: 0px;
+            margin: 10px;
+
+        }
+    </style>
 </head>
 <body>
+    <div id="container">
+    <h1>Hello my dear family!<h1>
+    <h2>This tablet will be your guide to my holiday puzzle challenge.</h2>
+    <h2>Use it for directions and to enter the codes that fit the descriptions on the screen.</h2>
     <button id="launchButton">Begin</button>
-
+    </div>
     <script>
         let button = document.getElementById('launchButton')
         button.addEventListener('click',() =>{
