--- a/night_before_christmas/lithophanesSuccess.html
+++ b/night_before_christmas/lithophanesSuccess.html
@@ -5,14 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night Before Christmas</title>
+    <style>
+        body{
+            background-color: green;
+            margin: 0px;
+            padding: 0px;
+        }
+        button{
+            width: 400px;
+            height: 200px;
+            background-color: red;
+            color: white;
+            font-size: 30px;
+            border-radius: 10px;
+            border-width: 0px;
+            box-shadow: 5px 5px 5px #AAAAAA;
+            margin: 20px;
+        }
+        #container{
+            
+            background-color: green;
+            width: 1280px;
+            height: 800px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* justify-content: center; */
+        }
+        h1,h2{
+            color: white;
+            padding: 0px;
+            margin: 10px;
+
+        }
+    </style>
 </head>
 <body>
-    <button id="launchButton">Begin</button>
-
+    <div id="container">
+    <h1>You've almost done it!<h1>
+    <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
+    <h2>The top right drawer is now open</h2>
+    <button id="launchButton">Continue</button>
+    </div>
     <script>
+        fetch('http://192.168.1.198/cm?cmnd=Power3%202')
+        setTimeout(fetch('http://192.168.1.198/cm?cmnd=Power3%202'),250)
         let button = document.getElementById('launchButton')
         button.addEventListener('click',() =>{
-            window.location.replace('./finalMessage.html')
+            
+            // fetch('http://192.168.1.198/cm?cmnd=Power4%20Off')
+            setTimeout(window.location.replace('./finalMessage.html'),500)
         })
     </script>
 </body>
