updated nbc puzzles for Fire 8 screens

--- a/night_before_christmas/index.html
+++ b/night_before_christmas/index.html
@@ -43,7 +43,7 @@
 <body>
     <div id="container">
     <h1>Hello my dear family!<h1>
-    <h2>This tablet will be your guide to my holiday puzzle challenge.</h2>
+    <h2>This tablet will be your guide through my holiday puzzle challenge.</h2>
     <h2>Use it for directions and to enter the codes that fit the descriptions on the screen.</h2>
     <button id="launchButton">Begin</button>
     </div>
