--- a/night_before_christmas/reindeer.html
+++ b/night_before_christmas/reindeer.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bomber's Headlines</title>
+    <title>Reindeer Games</title>
     <style>
         body{
             margin: 0px;
             padding: 0px;
         }
         .container{
-            width: 800px;
-            height: 480px;
-            background-color: black;
+            width: 1280px;
+            height: 800px;
+            background-color: green;
             color: white;
             text-align: center;
             padding: 0px;
@@ -26,9 +26,10 @@
         h1{
             padding: 0px;
             margin: 0px;
+            margin-bottom: 10px;
         }
         .grid{
-            width: 575px;
+            width: 650px;
             height: auto;
             display: flex;
             flex-wrap: wrap;
@@ -36,9 +37,9 @@
             align-items: center;
         }
         .tile{
-            width: 100px;
-            height: 100px;
-            background-color: darkgrey;
+            width: 200px;
+            height: 200px;
+            background-color: red;
             margin: 2px;
             display: flex;
             justify-content: center;
@@ -47,9 +48,9 @@
             border-width: 2px;
             border-color: rgb(128, 125, 125);
             border-style: solid;
-            font-size: 18px;
+            font-size: 30px;
             font-weight: bold;
-            color: rgb(50, 50, 50);
+            color: white;
         }
         .selected{
             background-color: rgb(212, 209, 209);
@@ -60,7 +61,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>My Tour of Alberta</h1>
+        <h1>My Favorite Reindeer</h1>
         <div class="grid" id="grid">
 
         </div>
