--- a/night_before_christmas/clothesPins.html
+++ b/night_before_christmas/clothesPins.html
@@ -9,26 +9,29 @@
         body{
             margin: 0px;
             padding: 0px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
         }
         .container{
-            width: 800px;
-            height: 400px;
+            width: 1280px;
+            height: 650px;
             background-color: green;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         .header{
-            width: 800px;
-            height: 80px;
+            width: 1280px;
+            height: 150px;
             background-color: green;
             color: white;
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             justify-content: center;
         }
         .grid{
-            width: 380px;
+            width: 500px;
             height: auto;
             display: flex;
             flex-wrap: wrap;
@@ -36,8 +39,8 @@
        
         
         .key{
-            width: 100px;
-            height: 75px;
+            width: 125px;
+            height: 100px;
             background-color: red;
             color: #555555;
             margin: 5px;
@@ -77,8 +80,8 @@
             background-color: yellow;
         } */
         .item{
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
             /* background-color: rgb(50, 50, 50); */
             margin: 10px;
             border-radius: 5px;
