--- a/night_before_christmas/lithophanes.html
+++ b/night_before_christmas/lithophanes.html
@@ -12,24 +12,24 @@
             
         }
         .container{
-            width: 800px;
-            height: 400px;
+            width: 1280px;
+            height: 650px;
             background-color: green;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         .header{
-            width: 800px;
-            height: 80px;
+            width: 1280px;
+            height: 150px;
             background-color: green;
             color: white;
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             justify-content: center;
         }
         .grid{
-            width: 380px;
+            width: 500px;
             height: auto;
             display: flex;
             flex-wrap: wrap;
@@ -38,8 +38,8 @@
         }
        
         .item{
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
             background-color: rgb(207, 25, 25);
             margin: 10px;
             border-radius: 3px;
@@ -49,8 +49,8 @@
             flex-direction: column;
         }
         .key{
-            width: 100px;
-            height: 75px;
+            width: 125px;
+            height: 100px;
             background-color: rgb(207, 25, 25);
             color: rgb(212, 209, 209);
             margin: 5px;
