--- a/night_before_christmas/songs.html
+++ b/night_before_christmas/songs.html
@@ -11,24 +11,24 @@
             padding: 0px;
         }
         .container{
-            width: 800px;
-            height: 400px;
+            width: 1280px;
+            height: 650px;
             background-color: lightgreen;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         .header{
-            width: 800px;
-            height: 80px;
+            width: 1280px;
+            height: 150px;
             background-color: lightgreen;
             color: white;
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             justify-content: center;
         }
         .grid{
-            width: 380px;
+            width: 500px;
             height: auto;
             display: flex;
             flex-wrap: wrap;
@@ -36,8 +36,8 @@
        
         
         .key{
-            width: 100px;
-            height: 75px;
+            width: 125px;
+            height: 100px;
             background-color: red;
             color: white;
             margin: 5px;
@@ -77,8 +77,8 @@
             background-color: yellow;
         } */
         .item{
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
             /* background-color: rgb(50, 50, 50); */
             margin: 10px;
             border-radius: 5px;
