updated reindeer and crossword puzzles

--- a/night_before_christmas/reindeer.html
+++ b/night_before_christmas/reindeer.html
@@ -68,7 +68,7 @@
     </div>
     <script>
         let reindeer = ['Dasher', 'Dancer', 'Prancer', 'Vixen','Comet', 'Cupid', 'Donner','Blitzen','Rudolph']
-        let code = ['Dasher','Dancer','Donner','Blitzen']
+        let code = ['Dasher','Dancer','Donner','Blitzen','Comet']
         let attempt = []
         let grid = document.getElementById('grid')
         console.log(reindeer.length)
