updated the books, renamed the tags puzzle and created mqtt listeners

--- a/bait_and_switch/HTML_Files_desk/good reads.html
+++ b/bait_and_switch/HTML_Files_desk/good reads.html
@@ -113,7 +113,7 @@
     <div class="window">
         <div class="puzzle_title"><h1>Good Reads</h1></div>
         <div class="puzzle_clue"><h3>My favorite Authors make Words on the Page come to life!</h3></div>
-        <div class="puzzle_clue2"><h3>(Connolly, 13, 184)</h3><h3>(Roberts, 32, 102)</h3><h3>(Hoag, 52, 75)</h3><h3>(Jackson, 70, 181)</h3></div>
+        <div class="puzzle_clue2"><h3>(Lincoln, 87, 51)</h3><h3>(Patterson, 17, 130)</h3><h3>(Penny, 110, 57)</h3><h3>(Donachie, 134, 247)</h3></div>
         <div class="button_grid">
             <button class="button" id="button1" onclick="increaseCounter(0)">0</button>
             <button class="button" id="button2" onclick="increaseCounter(1)">0</button>
