--- a/bombers_revenge/tags.html
+++ b/bombers_revenge/tags.html
@@ -96,7 +96,7 @@
     </style>
 </head>
 <body>
-    <div class="header"><h1>Cell Mates for Life</h1></div>
+    <div class="header"><h1>Tag, You're It!</h1></div>
     <div class="container">
         <div class="grid" id="itemGrid">
             <div class="item selectedItem" id="item1">
