--- a/bait_and_switch/HTML_Files_desk/good reads.html
+++ b/bait_and_switch/HTML_Files_desk/good reads.html
@@ -113,7 +113,7 @@
     <div class="window">
         <div class="puzzle_title"><h1>Good Reads</h1></div>
         <div class="puzzle_clue"><h3>My favorite Authors make Words on the Page come to life!</h3></div>
-        <div class="puzzle_clue2"><h3>(sandford, 65, 151)</h3><h3>(Patterson, 89, 131)</h3><h3>(Penny, 110, 57)</h3><h3>(Flynn, 29, 240)</h3></div>
+        <div class="puzzle_clue2"><h3>(Sandford, 65, 151)</h3><h3>(Patterson, 89, 131)</h3><h3>(Penny, 110, 57)</h3><h3>(Flynn, 29, 240)</h3></div>
         <!-- <div class="puzzle_clue2"><h3>(Lincoln, 87, 51)</h3><h3>(Patterson, 17, 130)</h3><h3>(Penny, 110, 57)</h3><h3>(Donachie, 134, 247)</h3></div> -->
         <!-- Patterson,89,131 for 3 Flynn,29,240 for 5, Sandford, 65, 151 for 1 -->
         <div class="button_grid">
