--- a/night_before_christmas/colouringSuccess.html
+++ b/night_before_christmas/colouringSuccess.html
@@ -5,46 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night Before Christmas</title>
-    <style>
-        body{
-            background-color: green;
-            margin: 0px;
-            padding: 0px;
-        }
-        button{
-            width: 400px;
-            height: 200px;
-            background-color: red;
-            color: white;
-            font-size: 30px;
-            border-radius: 10px;
-            border-width: 0px;
-            box-shadow: 5px 5px 5px #AAAAAA;
-            margin: 20px;
-        }
-        #container{
-            
-            background-color: green;
-            width: 1280px;
-            height: 800px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            /* justify-content: center; */
-        }
-        h1,h2{
-            color: white;
-            padding: 0px;
-            margin: 10px;
-
-        }
-    </style>
+    <link rel="stylesheet" href="success.css">>
 </head>
 <body>
     <div id="container">
     <h1>Getting closer!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
-    <h2>Yell out "I'll be home for Christmas!" and I'll reveal the next clue.</h2>
+    <h2>Yell out "<i>I'll be home for Christmas!</i>" and I'll reveal the next clue.</h2>
     <button id="launchButton">Continue</button>
     </div>
     <script>
