--- a/night_before_christmas/index.html
+++ b/night_before_christmas/index.html
@@ -45,6 +45,7 @@
     <h1>Hello my dear family!<h1>
     <h2>This tablet will be your guide through my holiday puzzle challenge.</h2>
     <h2>Use it for directions and to enter the codes that fit the descriptions on the screen.</h2>
+    <h2>After solving each puzzle, you'll need to call out the secret phrase I give you to be able to advance.</h2>
     <button id="launchButton">Begin</button>
     </div>
     <script>
