--- a/night_before_christmas/finalMessage.html
+++ b/night_before_christmas/finalMessage.html
@@ -9,15 +9,20 @@
         body{
             width: 1280px;
             height: 800px;
-            background-color: red;
+            /* background-color: red; */
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            background: url("./finalBackground.jpg");
+            background-repeat: no-repeat;
+            background-size: 1280px 800px;
         }
         h1{
             text-align: center;
             color: white;
+            font-size: 50px;
+            text-shadow: 3px 3px 3px black;
         }
         .container{
             width: 1200px;
@@ -47,6 +52,8 @@
             text-align: center;
             font-size: 40px;
             margin: 10px;
+            text-shadow: 3px 3px 3px black;
+            color: white;
         }
         .code{
             font-size: 40px;
@@ -55,11 +62,13 @@
             background-color: green;
             border-radius: 5px;
             color: white;
+            opacity: .9;
         }
     </style>
 </head>
 <body>
-    <h1>My Gift to You ~ When you know it, yell it out!</h1>
+    <h1>My Gift to You</h1>
+    <H2>When you know it, yell it out!</H2>
     <div class="container" id="container">
         
 
