--- a/night_before_christmas/index.html
+++ b/night_before_christmas/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night Before Christmas</title>
-    <style>
+    <!-- <style>
         body{
             background-color: green;
             margin: 0px;
@@ -38,13 +38,21 @@
             margin: 10px;
 
         }
+    </style> -->
+    <link rel="stylesheet" href="success.css">
+    <style>
+        h2 {
+            font-size: 40px;
+        }
+        button {
+            font-size: 40px;
+        }
     </style>
 </head>
 <body>
     <div id="container">
     <h1>Hello my dear family!<h1>
-    <h2>This tablet will be your guide through my holiday puzzle challenge.</h2>
-    <h2>Use it for directions and to enter the codes that fit the descriptions on the screen.</h2>
+    <h2>This tablet will be your guide through my holiday challenge. Use it for directions and to enter the codes that fit the descriptions on the screen.</h2>
     <h2>After solving each puzzle, you'll need to call out the secret phrase I give you to be able to advance.</h2>
     <button id="launchButton">Begin</button>
     </div>
