--- a/night_before_christmas/lithophanesSuccess.html
+++ b/night_before_christmas/lithophanesSuccess.html
@@ -11,7 +11,7 @@
     <div id="container">
     <h1>You've almost done it!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
-    <h2>Yell out "Happiness is the true key to success" and I'll let you have 🗝️</h2>
+    <h2>Yell out "Happiness is the true key to success" and I'll let you have the 🗝️</h2>
     <button id="launchButton">Continue</button>
     </div>
     <script>
