--- a/night_before_christmas/reindeer.html
+++ b/night_before_christmas/reindeer.html
@@ -9,11 +9,14 @@
         body{
             margin: 0px;
             padding: 0px;
+            background: url("./reindeerbackground.jpg");
+            background-repeat: no-repeat;
+            background-size: 1280px 800px;
         }
         .container{
             width: 1280px;
             height: 800px;
-            background-color: green;
+            /* background-color: green; */
             color: white;
             text-align: center;
             padding: 0px;
@@ -27,6 +30,8 @@
             padding: 0px;
             margin: 0px;
             margin-bottom: 10px;
+            font-size: 50px;
+            text-shadow: 3px 3px 3px black;
         }
         .grid{
             width: 650px;
@@ -39,7 +44,7 @@
         .tile{
             width: 200px;
             height: 200px;
-            background-color: red;
+            background-color: rgb(159, 5, 5);
             margin: 2px;
             display: flex;
             justify-content: center;
@@ -51,10 +56,12 @@
             font-size: 30px;
             font-weight: bold;
             color: white;
+            opacity: .9;
+            text-shadow: 3px 3px 3px black;
         }
         .selected{
-            background-color: rgb(212, 209, 209);
-            color: rgb(50, 50, 50);
+            background-color: rgb(244, 122, 122);
+            color: white;
         }
         
     </style>
