--- a/night_before_christmas/songsSuccess.html
+++ b/night_before_christmas/songsSuccess.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div id="container">
-    <h1>That was music to my ears!<h1>
+    <h1>Music to my ears!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
     <h2>Yell out "I want a real tree next time!" and I'll reveal the next puzzle.</h2>
-    <button id="launchButton">Begin</button>
+    <button id="launchButton">Continue</button>
     </div>
     <script>
         fetch('http://192.168.1.198/cm?cmnd=Power6%202')
