--- a/night_before_christmas/clothesPins.html
+++ b/night_before_christmas/clothesPins.html
@@ -12,11 +12,14 @@
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            background: url("./clothesPinsBackground.jpg");
+            background-repeat: no-repeat;
+            background-size: 1280px 800px;
         }
         .container{
             width: 1280px;
             height: 650px;
-            background-color: green;
+            /* background-color: green; */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -24,11 +27,12 @@
         .header{
             width: 1280px;
             height: 150px;
-            background-color: green;
+            /* background-color: green; */
             color: white;
             display: flex;
             align-items: flex-end;
             justify-content: center;
+            text-shadow: 3px 3px 3px black;
         }
         .grid{
             width: 500px;
@@ -42,20 +46,25 @@
             width: 125px;
             height: 100px;
             background-color: red;
-            color: #555555;
+            color: white;
             margin: 5px;
             border-radius: 5px;
             display: flex;
             align-items: center;
             justify-content: center;
-
+            text-shadow: 3px 3px 3px black;
+            opacity: .9;
         }
         h1{
             text-align: center;
             margin: 0px;
+            font-size: 50px;
         }
         h2{
-            color: #555555;
+            color: white;
+            text-shadow: 3px 3px 3px black;
+            font-size: 35px;
+            text-align: center;
         }
         .entry{
             width: 130px;
@@ -91,6 +100,7 @@
             flex-direction: column;
             border-width: 3px;
             border-style: solid;
+            opacity: .9;
             
         }
         /* .selectedItem{
@@ -171,7 +181,7 @@
 
         keys.map((key, index) => {
             let square = document.createElement('div')
-            let label = document.createElement('h1')
+            let label = document.createElement('h2')
             square.className = 'key'
             square.id = 'keypad' + index
             console.log(square)
