--- a/night_before_christmas/crosswordSuccess.html
+++ b/night_before_christmas/crosswordSuccess.html
@@ -12,7 +12,7 @@
     <h1>Keep it up!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
     <h2>Yell out "Ginger snaps!" and I'll reveal the next puzzle</h2>
-    <button id="launchButton">Begin</button>
+    <button id="launchButton">Continue</button>
     </div>
     <script>
         fetch('http://192.168.1.198/cm?cmnd=Power8%202')
