updated clues for NBC

--- a/night_before_christmas/clothesPinsSuccess.html
+++ b/night_before_christmas/clothesPinsSuccess.html
@@ -11,7 +11,7 @@
     <div id="container">
     <h1>Nice job!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
-    <h2>Yell out "White Christmas!" and I'll reveal the next puzzle</h2>
+    <h2>Yell out "<i>White Christmas!</i>" and I'll reveal the next puzzle</h2>
     <button id="launchButton">Continue</button>
     </div>
     <script>
