--- a/night_before_christmas/index.html
+++ b/night_before_christmas/index.html
@@ -53,7 +53,7 @@
     <div id="container">
     <h1>Hello my dear family!<h1>
     <h2>This tablet will be your guide through my holiday challenge. Use it for directions and to enter the codes that fit the descriptions on the screen.</h2>
-    <h2>After solving each puzzle, you'll need to call out the secret phrase I give you to be able to advance.</h2>
+    <h2>After solving each puzzle, you'll need to call out the secret phrase I give you to advance.</h2>
     <button id="launchButton">Begin</button>
     </div>
     <script>
