--- a/night_before_christmas/pizzaSuccess.html
+++ b/night_before_christmas/pizzaSuccess.html
@@ -11,7 +11,7 @@
     <div id="container">
     <h1>Tasty!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
-    <h2>Yell out "pineapple does not belong on pizza!" and I'll reveal the next puzzle.</h2>
+    <h2>Yell out "<i>pineapple does not belong on pizza!</i>" and I'll reveal the next puzzle.</h2>
     <button id="launchButton">Continue</button>
     </div>
     <script>
