--- a/night_before_christmas/songsSuccess.html
+++ b/night_before_christmas/songsSuccess.html
@@ -11,7 +11,7 @@
     <div id="container">
     <h1>Music to my ears!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
-    <h2>Yell out "I want a real tree next time!" and I'll reveal the next puzzle.</h2>
+    <h2>Yell out "<i>I want a real tree next time!</i>" and I'll reveal the next puzzle.</h2>
     <button id="launchButton">Continue</button>
     </div>
     <script>
