--- a/night_before_christmas/crosswordSuccess.html
+++ b/night_before_christmas/crosswordSuccess.html
@@ -11,7 +11,7 @@
     <div id="container">
     <h1>Keep it up!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
-    <h2>Yell out "Ginger snaps!" and I'll reveal the next puzzle</h2>
+    <h2>Yell out "<i>Ginger snaps!</i>" and I'll reveal the next puzzle</h2>
     <button id="launchButton">Continue</button>
     </div>
     <script>
