--- a/night_before_christmas/reindeerSuccess.html
+++ b/night_before_christmas/reindeerSuccess.html
@@ -11,7 +11,7 @@
     <div id="container">
     <h1>Great work!<h1>
     <!-- <h2>This tablet will be your guide to my holiday puzzle challenge.</h2> -->
-    <h2>Yell out "I love reindeer! and I'll reveal the next puzzle".</h2>
+    <h2>Yell out "<i>I love reindeer!</i>" and I'll reveal the next puzzle.</h2>
     <button id="launchButton">Continue</button>
     </div>
     <script>
