change NBC to remove first puzzle

--- a/night_before_christmas/index.html
+++ b/night_before_christmas/index.html
@@ -59,7 +59,7 @@
     <script>
         let button = document.getElementById('launchButton')
         button.addEventListener('click',() =>{
-            window.location.replace('./reindeer.html')
+            window.location.replace('./clothesPins.html')
         })
     </script>
 </body>
