--- a/game_society/success.html
+++ b/game_society/success.html
@@ -17,6 +17,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            background-color: orangered;
         }
         .header{
             width: 800px;
@@ -26,6 +27,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            background-color: orangered;
         }
         .grid{
             width: 380px;
@@ -63,6 +65,7 @@
             text-align: center;
             margin: 0px;
             color: white;
+            padding: 10px;
         }
         h2{
             color: rgb(75, 73, 73);
@@ -82,8 +85,8 @@
     </style>
 </head>
 <body>
-    <div class="header"></div>
-    <div class="container"><h1>Success!</h1></div>
+    <div class="header"><h1>Congratulations!</h1></div>
+    <div class="container"><h1>You've solved all the puzzles and earned your membership into the HG Game Society!</h1></div>
         
 </body>
 </html>
