adjusted Game Society codes

--- a/game_society/snakes.html
+++ b/game_society/snakes.html
@@ -150,10 +150,10 @@
         let colors = ['blue','green','red','yellow']
         let itemEntry = [item1Entry,item2Entry,item3Entry,item4Entry]
 
-        items[0].style = 'background-color: blue; border-color: red;'
-        items[1].style = 'background-color: green;'
+        items[0].style = 'background-color: green; border-color: red;'
+        items[1].style = 'background-color: yellow;'
         items[2].style = 'background-color: red;'
-        items[3].style = 'background-color: yellow;'
+        items[3].style = 'background-color: blue;'
 
         items.map((item, index) => {
             item.addEventListener('click',()=>{
