corrected Game Society snakes and ladders puzzle

--- a/game_society/snakes.html
+++ b/game_society/snakes.html
@@ -147,7 +147,7 @@
         let activeItem = item1
         let activeEntry = item1Entry
         let items = [item1,item2,item3,item4]
-        let colors = ['blue','green','red','yellow']
+        let colors = ['green','yellow','red','blue']
         let itemEntry = [item1Entry,item2Entry,item3Entry,item4Entry]
 
         items[0].style = 'background-color: green; border-color: red;'
