updated clue puzzle finale on completion

--- a/game_society/clue.html
+++ b/game_society/clue.html
@@ -167,6 +167,10 @@
             console.log(code)
             if (accusation + "" == code + "") {
                 fetch("http://pigamemaster.local:1880/drawer8")
+                setTimeout(()=>{
+                    fetch("http://pigamemaster.local:1880/success")
+                    ,500
+                })
                 setTimeout(() => {
                     window.location.replace('success.html')
                 }, 500);
